Revision history for Perl extension Net::SSH2.

0.49  2013-07-22 20:11:25
        - compile on gcc with '-DPERL_GCC_PEDANTIC -std=c89 -pedantic-errors -Wno-long-long' to enforce maximum compatibility with C89 (RT#87069)

0.48  2013-02-20 20:58:18
        - fix builds on non-threaded perls (mauke: Lukas Mai)
        - set default extra libs for Win32 (kmx)

0.47  2013-02-10 19:06:42
        - timeout method to set a global timeout for every action (uses
          libssh2_session_set_timeout) (pullreq from Thierry Treyer: zehkae)
        - threads support for OpenSSL and libgcrypt (pullreq from James Mccoy:
          jamessan)
        - support for building with libgcrypt (pass gcrypt to Makefile.PL)
          (pullreq from James Mccoy: jamessan)

0.46  2012-11-10 01:33:14
        - patch from Robert-Jean Denault (Robert-jean.Denault@telus.com) to fix
          segfault when releasing sftp object in debug mode

0.45  2012-05-27 09:18:49
        - add 64bit instructions to BUILDING.WIN32 and clarify some things

0.44  2012-04-25 16:27:55
        - update to latest ppport.h
        - fix memory leak in password auth (RT#76701) (salva)

0.43  2012-04-24 07:47:21
        - correct fix for (RT#73659) (remove inc=/lib= from @ARGV)
        - add BUILDING.WIN32 guide for building on Windows from scratch

0.42  2012-04-19 14:05:44
        - add LD_RUN_PATH/LD_LIBRARY_PATH to search paths (RT#74747)
        - fix order of search paths for libs/includes

0.41  2012-04-18 22:12:07
        - fix missing -I for include directory with inc= option to Makefile.PL
          (RT#73659)

0.40  2011-10-23 18:41:17
        - add ssh-agent support (krimdomu)

0.39  2011-07-17 18:24:30
        - fix double free in auth_password (RT#69444)

0.38  2011-06-02 14:52:30
        - add version check for block_directions

0.37  2011-06-02 14:34:26
        - update ppport.h
        - use correct libssh2 version check for exit_signal support

0.36  2011-05-27 21:28:00