@@ -1,5 +1,8 @@
 Revision history for Perl extension Net::SSH2.
 
+        - remove #warning, not standard C89, throws an error on non-threaded
+          builds due to -pedantic-errors (RT#87398)
+
 0.49  2013-07-22 20:11:25
         - compile on gcc with '-DPERL_GCC_PEDANTIC -std=c89 -pedantic-errors -Wno-long-long' to enforce maximum compatibility with C89 (RT#87069)
 
